replace .get(0) with .getFirst()
Signed-off-by: Nicolas Rol <nicolas.rol@rte-france.com>